ros2_ws/log/build_2026-05-15_20-06-13/scooter_data/stderr.log
  File "/home/ubuntu/ros2_ws/install/scooter_data/lib/python3.12/site-packages/scooter_data/camera.py", line 90
    continue
    ^^^^^^^^
SyntaxError: 'continue' not properly in loop

